--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "uuid": "7.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
